[package]
name = "tree-sitter-ylang"
description = "Parser for ylang that adds syntax highlighting"
version = "0.1.0"
authors = ["kievzenit <kir.backender@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ylang"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/kievzenit/tree-sitter-ylang"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
